fix overflow

--- a/style.css
+++ b/style.css
@@ -40,10 +40,10 @@ a:hover {
 #app {
   min-height: 100vh;
   min-width: 360px;
-  width: 100vw;
-
+  max-width: 100vw;
   display: grid;
   grid-template-rows: auto 1fr auto;
+  overflow-y: hidden;
 }
 
 /* header */
@@ -70,6 +70,7 @@ a:hover {
 .main {
   position: relative;
   background-color: rgb(240, 255, 233);
+  overflow: hidden;
 }
 
 .main .bg {
